Creating common exception classes.